# zih_web_sim

./: .env  .gitignore  .travis.yml  Cargo.toml  readme.md
migrations/2020-08-18-091258_create_user/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
static/: index.html  new_user.html
templates/: list_users.html.tera  show_user.html.tera  update_user_name.html.tera
