[package]
name = "zih_web_sim"
version = "0.1.0"
authors = ["Jakob Krebs <jakob@krbs.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde] 
version = "1.0"
features = ["derive"]

[dependencies.rocket]
version = "0.4.5"

[dependencies.diesel]
version = "1.4.4"
features = ["sqlite"]

[dependencies.dotenv]
version = "0.15.0"

[dependencies.rand]
version = "0.7.3"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]
